Reactive: upgrade to Spring Boot 4
Upgrade the reactive module to Spring Boot 4 (parent 4.0.6) and update related dependencies (spring-modulith, OkHttp/mockwebserver3, security test starters). Add WebClient support and reactive test artifacts; add maven-compiler plugin annotation processors for Lombok and configuration-processor. Refactor reactive code: add Javadoc, move config properties to records, simplify SemiSecretObject with Lombok, remove unused MaskMethodAuthorizationDeniedHandler, and wire WebClient beans (token passthrough and OAuth2 client). Improve reactive security: update Keycloak JWT converter, custom authorization filter, filter configuration, and security chain. Update and expand integration tests to use MockWebServer3, enhance WebTestClient assertions and scenarios (token passthrough, client credentials, preauth, field masking), and add Modulith verification and test annotations. Update README to reflect Spring Boot 4, Spring Framework/Security 7, modulith usage, and notes about reactive masking limitations.